Actually fix the overflow problem

--- a/src/documents/guideguide/css/_base.scss
+++ b/src/documents/guideguide/css/_base.scss
@@ -250,7 +250,8 @@ table {
 
   .scroll-outer {
     margin-bottom: 41px;
-    overflow: scroll;
+    overflow: hidden;
+    overflow-y: scroll;
   }
 
   .scrollbar {
